<resources>
    <string name="app_name">lab 19 - GraphAPI Omelko</string>
    <string name="msgLoginSecceed">Login succeed.</string>
    <string name="msgIncorrectLoginPassword">Login or password is uncorrected.</string>
    <string name="msgRequestFailed">Request failed.</string>
    <string name="msgInvalidToken">Invalid token.</string>
    <string name="msgPleaseSignIn">Please sign in.</string>
    <string name="btnLogin">Sign in</string>
    <string name="btnOk">OK</string>
    <string name="btnGraphs">Graphs</string>
    <string name="btnSessions">Sessions</string>
    <string name="btnBack">Back</string>
    <string name="btnAccountDelete">Delete account</string>
    <string name="btnChangePassword">Change password</string>
    <string name="btnLogOut">Logout</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnRegister">Sign up</string>
    <string name="btnSetting">Settings</string>
    <string name="btnSessionList">List of sessions</string>
    <string name="swtRemPas">Remember</string>
    <string name="tvLogin">Login:</string>
    <string name="tvPassword">Password:</string>
    <string name="tvSignInTitle">Authorization</string>
    <string name="txtCSTR">Connection string</string>
    <string name="txtOk">Ok</string>
    <string name="txtApply">Apply</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtInfo">Info</string>
    <string name="txtError">Error</string>
    <string name="txtWarning">Warning</string>
    <string name="txtValue">Value:</string>
    <string name="txtMenu">Menu</string>
    <string name="txtAccount">Account:</string>
    <string name="txtToken">Token:</string>


</resources>