<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitleMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/txtMenu"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUserMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txtAccount" />

        <TextView
            android:id="@+id/tvUserNameMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTokenMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtToken" />

        <TextView
            android:id="@+id/tvCurrentTokenMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSessionsMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSessions" />

        <Button
            android:id="@+id/btnGraphsMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGraphs" />

        <Button
            android:id="@+id/btnDeleteUserMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAccountDelete" />

        <Button
            android:id="@+id/btnCGPWMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnChangePassword" />

        <Button
            android:id="@+id/btnLogoutMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLogOut" />
    </LinearLayout>

</LinearLayout>